# Level-2_cpp

./: SampleCode.txt  SampleCode1.txt  setter_getter_example.cpp
BookExamples/: Calling_recursive_function.cpp  Fibonacci_sequence.cpp  basic_derived_class_member.cpp  basic_inheritance.cpp  basic_polymorphism.cpp  car_payment.cpp  grade.cpp  overriding_member_functions.cpp  sample_composition_vector.cpp
BookExamples/employees/abstract_classes_and_pure_virtual_functions/: EmployeeMain.cpp  EmployeeManager.cpp  EmployeeManager.h  (+4 more)
BookExamples/pointers/: a.cpp  assignment_operator_performs_a_deep_copy.cpp  deep_copy_fixed.cpp  deep_copy_wrong.cpp  employee_list_using_a_vector.cpp  find_char_in_string.cpp  find_string_in_string.cpp  function_tempalte.cpp  map_value_template.cpp  notes  pointer1.cpp  simple_array.cpp  write_a_copy_constructor.cpp  write_a_destructor.cpp  write_another_copy_constructor.cpp
Example - Fractions/: CMakeLists.txt  Fraction.cpp  Fraction.h  Main.cpp
Project1-Java_to_cpp/Project/: CMakeLists.txt
Project1-Java_to_cpp/Project/Exercises/: CMakeLists.txt  CreditCardValidator.cpp  GradeCalculator.cpp  test.cpp
Project1-Java_to_cpp/Project/Tests/: CMakeLists.txt  CreditCardValidatorTester.cpp  GradeCalculatorTester.cpp  ProgramParser.cpp  ProgramParser.h  QuadraticRootToolTester.cpp
Project1-Java_to_cpp/Project/Tests/win/: exec-stream-helpers.cpp
Project2-NumericalMenu/NumericalMenu Class/: CMakeLists.txt  MenuTester.cpp  NumericalMenu.cpp  NumericalMenu.h
constEncapsulation/: CustomVector.h  Fraction.cpp  Fraction.h  main.cpp
(+11 files in other folders)
